<resources>
    <string name="app_name">login_signup_kotlin</string>
    <string name="title_login">Create Account</string>
    <string name="desc_intro">Join our community today and start expolring, sign in to continue or create a new account to get started.</string>
    <string name="welcome">WELCOME</string>
    <string name="start">Get Started</string>
    <string name="titre_login">Welcome Back</string>
    <string name="desc_login">Please enter your details to sign in.</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="forget_pw">Forget password?</string>
    <string name="email_hint">name@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="titre_signup">Create Account</string>
    <string name="desc_signup">Join our community and start exploring.</string>
    <string name="FullName">Full Name</string>
    <string name="fullNameHint">Enter your full name</string>
    <string name="pwConf">Confirm Password</string>
    <string name="password_confirm_hint">Repeat your password</string>
    <string name="alredy_account">Already have an account?</string>
    <string name="btn_add">Add</string>
    <string name="btn_view">View</string>
</resources>